added more explanations to crystal coordinate calculations

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -117,7 +117,7 @@ $2 \theta_S$. The scattering angles define the momentum transfer from the neutro
 \end{equation}
 where the two wavevectors $\underline{k}_i$ and $\underline{k}_f$ point along the propagation directions of the neutrons
 before and after scattering from the sample, respectively. They both have the same magnitudes for diffraction, namely
-$k_{i,f} = 2\pi / \lambda_i$ and are rotated by $2\theta_S$ from one another, see Fig. \ref{fig:diffraction} for a visualisation.
+$k_{i,f} = 2\pi / \lambda_{i}$ and are rotated by $2\theta_S$ from one another, see Fig. \ref{fig:diffraction} for a visualisation.
 The symbol $\hbar$ denotes the reduced Planck's constant, $\hbar = h / \left( 2\pi \right)$.
 
 \begin{figure}[htb]
