--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -246,7 +246,7 @@ It is then rotated by the $U$ matrix to account for the actual crystal orientati
 	\label{eq:UBtrafo}
 \end{equation}
 In the rest of this work we will not use the $U$ matrix explicitly, though, but instead directly work 
-with its basis vectors. This is just a formality, though, the mathematics are the same.
+with its basis vectors and the metric tensor. This is just a formality, though, the mathematics are the same.
 
 % ------------------------------------------------------------------------------------------------------------------------------------
 
@@ -328,7 +328,8 @@ We could now -- as is done in the work by Lumsden \textit{et al.} \cite{Lumsden2
 $Q$ of the vector $\left| Q \right>$ by explicitly transforming it into lab units using Eq. \ref{eq:UBtrafo}.
 Instead, we directly determine its length in lab units from its native rlu system using the covariant dot product \cite[p. 808]{Arens2015}:
 \begin{equation}
-	Q \ =\  \sqrt{Q^{\mathrm{rlu}}_i Q_{\mathrm{rlu}}^i} \ =\  \sqrt{g_{ij} Q_{\mathrm{rlu}}^i Q_{\mathrm{rlu}}^j}.
+	Q \ =\ Q_{\mathrm{lab}} \ =\ 
+	\sqrt{Q^{\mathrm{rlu}}_i Q_{\mathrm{rlu}}^i} \ =\  \sqrt{g_{ij} Q_{\mathrm{rlu}}^i Q_{\mathrm{rlu}}^j}.
 \end{equation}
 
 As we could scatter in either clockwise or counter-clockwise direction, $2 \theta_S$ can be positive or negative.
