--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -21,6 +21,7 @@ all the help with \textit{NOMAD} \cite{web_NOMAD}, the instrument control system
 about its internal details. 
 Thanks to Dr. Paolo Mutti, the head of both the scientific computing and the instrument control group 
 at the ILL, for supporting this project and for the great atmosphere and working environment there.
+I thank Alain Filhol for his help with creating \textit{MacOS} application packages and build scripts.
 
 Also not to forget the continuing support from my former advisor for past theses, Prof. Dr. Peter B\"oni,
 as well as from Prof. Dr. Christian Pfleiderer, Prof. Dr. Markus Garst, and Dr. Marc Janoschek in all our ongoing projects.
