--- a/errata/errata.lyx
+++ b/errata/errata.lyx
@@ -124,7 +124,11 @@ October 8, 2021
 Forgot to thank Alain Filhol in the ``Acknowledgements and Thanks'' chapter
  on p.
  9 (sorry Alain!).
- He has always helped me with all things Mac since the 
+ He has always helped me with all things 
+\shape italic
+Mac
+\shape default
+ since the 
 \shape italic
 Takin
 \shape default
