--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1743,7 +1743,7 @@
 @misc
 {
 	web_OpenGL,
-	title = {{OpenGL (Software}},
+	title = {{OpenGL (Software)}},
 	author = {{Khronos Group, Beaverton, OR, USA}},
 	year = {2021},
 	url = "https://www.opengl.org/",
@@ -1755,7 +1755,7 @@
 @misc
 {
 	web_Vulkan,
-	title = {{Vulkan (Software}},
+	title = {{Vulkan (Software)}},
 	author = {{Khronos Group, Beaverton, OR, USA}},
 	year = {2021},
 	url = "https://www.vulkan.org/",
