--- a/tex/outlook.tex
+++ b/tex/outlook.tex
@@ -97,5 +97,5 @@ Such a feature might be useful to include non-fixed geometry such as helium cans
 that may be present in the instrument space.
 
 A first general presentation of the software of this work will take place at the 
-\textit{Innovative Inelastic Neutron Scattering} workshop in Autrans-M\'eaudre-en-Vercors, France 
+\textit{Innovative Inelastic Neutron Scattering} workshop in Autrans-M\'eaudre-en-Vercors, France, 
 in October 2021.
