--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -285,6 +285,9 @@ The monochromator and analyser scattering angles follow directly from Bragg's eq
 	\begin{equation} \boxed{ \theta_{A} \ =\  \arcsin \left( \frac{\pi n}{d_{A} \cdot k_{f}} \right). } \end{equation}
 \end{minipage}
 
+As before, the wavenumbers of the incoming and outgoing neutron beams, $k_{i}$ and $k_{f}$, are related to their
+respective wavelengths, $\lambda_{i}$ and $\lambda_{f}$, via $k_{i,f}=2\pi/\lambda_{i,f}$, see, e.g., Ref. \cite[p. 66]{Gross2012}.
+
 %\vspace{0.5cm}
 
 To determine the sample scattering angle $2 \theta_S$, we use the so-called scattering triangle, see 
