--- a/errata/errata.lyx
+++ b/errata/errata.lyx
@@ -117,6 +117,39 @@ Tobias Weber
 \end_layout
 
 \begin_layout Section*
+October 13, 2021
+\end_layout
+
+\begin_layout Itemize
+Further infos for the binary versions of the software: The 
+\shape italic
+MacOS
+\shape default
+ version is unsigned, to start it for the first time, hold 
+\shape italic
+Control
+\shape default
+ while clicking on the application icon.
+ The 
+\shape italic
+MinGW
+\shape default
+ version for 
+\shape italic
+Windows
+\shape default
+ is a test build and does not have the full performance of the 
+\shape italic
+MacOS
+\shape default
+ or 
+\shape italic
+Linux
+\shape default
+ versions.
+\end_layout
+
+\begin_layout Section*
 October 12, 2021
 \end_layout
 
