--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -85,7 +85,8 @@ The software's main graphical user interface (GUI) is based on the \textit{Qt} f
 Both current releases of \textit{Qt} are supported, namely version 5 and version 6.
 Fig. \ref{fig:gui} depicts a typical session of the GUI.
 Similar to the core calculation module, the GUI is written in the recent C++20
-standard \cite{ISOCPP20} of the C++ language family \cite{Stroustrup2008, Stroustrup2018}.
+standard \cite{ISOCPP20} of the C++ language family \cite{Stroustrup2008, Stroustrup2018}
+and utilises the \textit{Boost} library \cite{web_boost}.
 The source code of the GUI module can be found in the directory \lstinline|./src/gui| of the
 source repository, see chapter \ref{ch:online} for more information.
 
