--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1487,6 +1487,18 @@
 
 @misc
 {
+	web_boost_gil,
+	title = {{Boost.GIL (Generic Image Library), part of the Boost C++ Libraries \cite{web_boost} (Software)}},
+	author = {{Adobe Systems Incorporated}},
+	year = {2005-2007},
+	url = "https://www.boost.org/doc/libs/1_76_0/libs/gil/doc/html/index.html",
+	github = "https://github.com/boostorg/gil",
+	note = "[Online; accessed 14-October-2021]",
+}
+
+
+@misc
+{
 	web_boost_signals,
 	title = {{Boost.Signals2, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {Douglas Gregor and Frank Mori Hess},
