--- a/tex/tests.tex
+++ b/tex/tests.tex
@@ -30,6 +30,7 @@ They all use the \lstinline[language=C++]|QGraphicsScene| class \cite{web_QGraph
 allow a dynamic manipulation of their respective geometrical objects using the mouse. 
 Calculations and results are automatically updated once the user changes the geometrical scenes.
 
+The programs described here can be started from the \textit{Tools} menu in the main software's GUI.
 Early versions of these tools were originally created in 2020 as preparation for the exam in the Algorithmic
 Geometry course, the original repository can be found on-line at \url{https://github.com/t-weber/geo}. 
 Afterwards, these programs were further developed for their current purpose during the present work.
