--- a/errata/errata.lyx
+++ b/errata/errata.lyx
@@ -117,6 +117,19 @@ Tobias Weber
 \end_layout
 
 \begin_layout Section*
+October 14, 2021
+\end_layout
+
+\begin_layout Itemize
+Info: The three utility programs described in chapter 8.1 (``Test tools'')
+ can be started from the 
+\shape italic
+Tools
+\shape default
+ menu in the main software's GUI.
+\end_layout
+
+\begin_layout Section*
 October 13, 2021
 \end_layout
 
