--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -27,7 +27,7 @@ of the TAS. The correspondence can be calculated by the so-called ``$UB$ matrix 
 Here, $B$ is the transformation matrix from crystal to lab coordinates and $U$ is a rotation to a specific 
 crystal plane. From that, the TAS angles can be derived using Bragg's law.
 
-Due to angular constraints by cables and tubes, as well as spatial constraints from the crammed instrument space, 
+Due to angular constraints by cables and tubes, as well as spatial constraints from the cramped instrument space,
 not every $\left( \underline{Q}, E \right)$ coordinate point is accessible, and a careful mapping of each point is
 usually required beforehand to avoid collisions of the instrument with walls, collisions with itself or movements
 which could pull out fragile cables.
