--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -23,16 +23,16 @@ a mirror of the repository can be found here:
 It has furthermore been permanently archived at the address:
 \url{https://archive.softwareheritage.org/browse/origin/?origin_url=https://code.ill.fr/scientific-software/takin/paths}.
 
-The latest version of the software's source code archive (ver-1.0) bears the 
-filename ``taspaths-oct21.tar.xz'' and has the SHA-256 \cite{web_sha256sum}
+The latest version of the software's source code archive (ver-1.1) bears the
+filename ``taspaths-oct21d.tar.xz'' and has the SHA-256 \cite{web_sha256sum}
 checksum:
 
 \begin{centering}
 \texttt{\\
-c4addc00595e725c\phantom{.} \\
-ff336e31128b29f3\phantom{.} \\
-dbb99c05090061aa\phantom{.} \\
-2c954115626a42aa.}\\
+58cf3b96c9abc6d5\phantom{.} \\
+4bdefc12dcd38aa1\phantom{.} \\
+db2e8708d5bc7294\phantom{.} \\
+03054e44286547ec.}\\
 \end{centering}
 
 
