--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -91,7 +91,7 @@ projects \cite{Weber2014, Takin2016, Takin2017, Takin2021}.
 Its full source code is included in the source archive merely for the convenience of not
 having to search the correct version.
 Apart from using the \textit{tlibs} library, several code snippets are further developments
-of their counterparts from that library and the Takin project \cite{Takin2021, Takin2017, Takin2016} in general, 
+of their counterparts from that library and the \textit{Takin} project \cite{Takin2021, Takin2017, Takin2016} in general, 
 among these the setup and build scripts for the various systems, 
 as well as the \textit{OpenGL} renderer and general-purpose code.
 The \textit{OpenGL} renderer was furthermore based on example source code \cite{web_QOpenGLWidgetExampleThreaded} provided
