--- a/errata/errata.lyx
+++ b/errata/errata.lyx
@@ -401,7 +401,7 @@ literal "false"
 \end_inset
 
  and its further developments have also already been published in several
- paper 
+ papers 
 \begin_inset CommandInset citation
 LatexCommand cite
 key "Takin2021,Takin2017,Takin2016,skxpaper"
