correctly write "doctoral" not "PhD" thesis

--- a/errata/errata_and_addenda.lyx
+++ b/errata/errata_and_addenda.lyx
@@ -340,7 +340,7 @@ literal "false"
 
 \begin_layout Itemize
 Note again that – as mentioned in the thesis – chapter 2 had already been
- published previously in my physics PhD thesis 
+ published previously in my physics doctoral thesis 
 \begin_inset CommandInset citation
 LatexCommand cite
 after "pp. 139-143"
@@ -424,7 +424,7 @@ literal "false"
 not
 \series default
  part of the present thesis, as it has already been developed during my
- physics PhD thesis 
+ physics doctoral thesis 
 \begin_inset CommandInset citation
 LatexCommand cite
 key "PhDWeber"
