also corrected to "doctoral thesis" in the main text

--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -67,7 +67,7 @@ The layout of the software's source code archive is shown in table \ref{tab:sour
 		           & mingw/ & ... \textit{MinGW} \cite{web_mingw64}. & \tabularnewline
 		\hline
 		tlibs2/ & & Mathematical template library developed  & \cite{Takin2016, Takin2017, Takin2021, DiplomaWeber, PhDWeber} \tabularnewline
-		           & & during my physics diploma and PhD thesis. & \tabularnewline
+		           & & during my physics diploma and doctoral theses. & \tabularnewline
 		\hline
 		externals/ & & Further external library dependencies. & \tabularnewline
 		\hline
@@ -86,7 +86,7 @@ Afterwards, the library and tools have been further developed for this work, the
 This software is based on the \textit{tlibs} libraries, which reside in the 
 sub-directory \lstinline|./tlibs2|, but are not part of the present thesis.
 That library has already been developed since my diploma thesis \cite{DiplomaWeber} 
-and my PhD thesis \cite{PhDWeber}, as well as during several software 
+and my doctoral thesis \cite{PhDWeber}, as well as during several software 
 projects \cite{Weber2014, Takin2016, Takin2017, Takin2021}.
 Its full source code is included in the source archive merely for the convenience of not
 having to search the correct version.
