--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -201,7 +201,7 @@ in Ref. \cite[pp. 55-93]{Shirane2002}.
 		an optional beryllium filter removing unwanted high energy neutrons \cite[pp. 78-84]{Shirane2002}
 		is also visible in this picture.
 		This picture is reproduced from the supplementary information of Ref. \cite{skxpaper}.
-		Similar figures, albeit showing different instruments, have been published in my PhD
+		Similar figures, albeit showing different instruments, have been published in my doctoral
 		thesis \cite[pp. 13-14]{PhDWeber}. }
 	\label{fig:thales}
 \end{figure}
