--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -17,7 +17,7 @@ or \textit{NICOS} \cite{web_NICOS}, but are also employed in virtual instrument 
 \textit{McStas} \cite{McStas2020}, as well as in data analysis software like \textit{Mantid} \cite{Arnold2014}.
 
 Note that this chapter has already been published in the manual of the software from Ref. \cite{Takin2021},
-as well as in my (physics) PhD thesis \cite[pp. 139-143]{PhDWeber},
+as well as in my (physics) doctoral thesis \cite[pp. 139-143]{PhDWeber},
 where the latter featured an earlier version of the same text, figures, and derivations.
 Originally, these formulas were re-derived with the aid of the source
 code of \textit{McStas'} \textit{templateTAS} virtual instrument \cite{web_mcstas_templateTAS, McStas2020}.
