--- a/errata/errata_and_addenda.lyx
+++ b/errata/errata_and_addenda.lyx
@@ -413,7 +413,7 @@ Typo on page 19, second paragraph: ``these formula''
 \end_layout
 
 \begin_layout Section*
-October 5, 2021
+October 5, 2021 (updated November 17, 2021)
 \end_layout
 
 \begin_layout Itemize
