--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -37,7 +37,9 @@ db2e8708d5bc7294\phantom{.} \\
 
 
 \paragraph{Source code layout}
-The layout of the software's source code archive is shown in table \ref{tab:sourcelayout}.
+The layout of the software's source code archive is shown in table \ref{tab:sourcelayout}. 
+For the source code archive mentioned above, all paths are understood to be relative to the first 
+(and only) directory at its root, namely \lstinline|./taspaths/|.
 
 \begin{table}[htb]
 	\centering
