--- a/errata/errata_and_addenda.lyx
+++ b/errata/errata_and_addenda.lyx
@@ -117,6 +117,43 @@ Tobias Weber
 \end_layout
 
 \begin_layout Section*
+November 17, 2021
+\end_layout
+
+\begin_layout Itemize
+References to source code directories and files are given relative to the
+ 
+\shape italic
+project root path
+\shape default
+, which is under 
+\family typewriter
+taspaths/
+\family default
+ inside the 
+\begin_inset CommandInset href
+LatexCommand href
+name "source code archive"
+target "https://doi.org/10.5281/zenodo.4625649"
+literal "false"
+
+\end_inset
+
+ and at 
+\begin_inset Flex URL
+status open
+
+\begin_layout Plain Layout
+
+https://code.ill.fr/scientific-software/takin/paths
+\end_layout
+
+\end_inset
+
+ for the repository.
+\end_layout
+
+\begin_layout Section*
 November 16, 2021
 \end_layout
 
@@ -440,7 +477,7 @@ literal "false"
 \family default
  (or 
 \family typewriter
-./taspaths/tlibs2
+<archive>/taspaths/tlibs2
 \family default
 ), is 
 \series bold
@@ -468,6 +505,8 @@ literal "false"
 \end_layout
 
 \begin_layout Standard
+
+\size small
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
 btprint "btPrintCited"
