--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -121,7 +121,7 @@ The last component, $c_3$, can be obtained from the vector length normalisation,
 	c_3^2 \ =\  c^2 \left[1 - \cos^2 \beta - \left(\frac{\cos \alpha - \cos \gamma \cos \beta}{\sin \gamma} \right)^2 \right].
 \end{equation}
 
-The full vector $\left| c \right>$ is now reads:
+The full vector $\left| c \right>$ now reads:
 \begin{equation} \boxed{ \left| c \right> \ =\  \left( \begin{array}{c}
 	c \cdot \cos \beta \\
 	c \cdot \frac{\cos \alpha - \cos \gamma \cos \beta}{\sin \gamma} \\
