--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -190,7 +190,7 @@ discussed in the next section.
 From the construction of reciprocal space, it can be shown that the basis vectors of reciprocal space
 are mutually perpendicular to the corresponding real space basis vectors \cite[p. 60]{Gross2012}.
 This directly leads to the so-called $B$ matrix, which transforms reciprocal-space relative lattice units (rlu)
-to lab coordinates (1/\AA) \cite{Lumsden2005}, is \cite[p. 60]{Gross2012}:
+to lab coordinates (1/\AA) \cite{Lumsden2005}, and which is \cite[p. 60]{Gross2012}:
 \begin{equation} B \ =\  2 \pi A^{-t}, \end{equation}
 where $-t$ denotes the transposed inverse.
 We can now also determine the metric tensor \cite[pp. 807-809]{Arens2015} corresponding to the coordinate
