updated bib item

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -581,8 +581,12 @@
 	skxpaper,
 	author = {T. Weber and D. M. Fobes and J. Waizner and P. Steffens and G. S. Tucker and M. B\"ohm and L. Beddrich and C. Franz and H. Gabold and R. Bewley and D. Voneshen and M. Skoulatos and R. Georgii and G. Ehlers and A. Bauer and C. Pfleiderer and P. B\"oni and M. Janoschek and M. Garst},
 	title = {{Topological magnon band structure of emergent Landau levels in a skyrmion lattice}},
-	year = {2021},
-	note = {Submitted, in review}
+	journal = {Science},
+	volume = {375},
+	number = {6584},
+	pages = {1025-1030},
+	year = {2022},
+	doi = {10.1126/science.abe4441},
 }
 
 
