--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -91,7 +91,7 @@ That library has already been developed since my diploma thesis \cite{DiplomaWeb
 and my doctoral thesis \cite{PhDWeber}, as well as during several software 
 projects \cite{Weber2014, Takin2016, Takin2017, Takin2021}.
 Its full source code is included in the source archive merely for the convenience of not
-having to search the correct version.
+having to search for the correct version.
 Apart from using the \textit{tlibs} library, several code snippets are further developments
 of their counterparts from that library and the \textit{Takin} project \cite{Takin2021, Takin2017, Takin2016} in general, 
 among these the setup and build scripts for the various systems, 
