--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -81,9 +81,10 @@ For the source code archive mentioned above, all paths are understood to be rela
 Development of the geometry library under \lstinline|./src/libs| and the auxiliary tools under \lstinline|./src/tools| 
 was already started in 2020, as preparation for the exam in Algorithmic Geometry, and their source code 
 is therefore based on the course materials \cite{FUH_geo2020}. 
-Afterwards, the library and tools have been further developed for this work, their separate code repository is available under 
-\url{https://github.com/t-weber/geo}, the software is furthermore registered under the DOI 
-\href{https://doi.org/10.5281/zenodo.4297475}{10.5281/zenodo.4297475}.
+Afterwards, the library and tools have been integrated into and further developed for this work,
+but their original, separate code repository also remains available under
+\url{https://github.com/t-weber/geo} for reference, it was furthermore registered
+under the DOI \href{https://doi.org/10.5281/zenodo.4297475}{10.5281/zenodo.4297475}.
 
 This software is based on the \textit{tlibs} libraries, which reside in the 
 sub-directory \lstinline|./tlibs2|, but are not part of the present thesis.
